src/test/resources/testcases/invalid/control/break_outside_loop.tc
int main() {
    int x = 1;
    if (x > 0) {
        break; // Error: break outside loop
    }
    return 0;
}
